--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -21,7 +21,12 @@
   background-color: #ffe353;
 }
 
-.languageSelect {
+.dropdown:active {
+  background-color: rgb(239, 239, 239) !important;
+  color: #000000 !important
+}
+
+/* .languageSelect {
   width: 110px;
   background-color: #ffe353;
   color: #212529;
@@ -52,4 +57,4 @@
 
 .languageSelect::-ms-expand {
   display: none;
-}
+} */
